# prediction_loc.nix

./: .envrc.template  README.md  flake.nix  pyproject.toml
prediction_loc/: getArchive.py
